fix: Java 8-compatible blank checks and clearer exception messages in generateClientToken
- Replace isBlank() (Java 11+) with trim().isEmpty() for Java 8 compatibility
- Fix APIException messages: remove null-prone concatenation, use descriptive
  messages ('Failed to generate client token: ...') instead of 'Failed to Create Client'